fix modal overflow scroll

--- a/components/admin/UserViewModal/UserViewModal.module.css
+++ b/components/admin/UserViewModal/UserViewModal.module.css
@@ -1,9 +1,9 @@
 .viewModal_container{
-    @apply absolute top-0 left-0 w-full h-full flex items-center justify-center shadow-[0_8px_32px_0_rgba(_31,38,135,0.37_)]   backdrop-blur-[_2px_] border rounded-[10px] border-solid border-[rgba(_255,255,255,0.18_)] bg-[rgba(255,255,255,0.4)];
+    @apply fixed top-0 left-0 w-full h-full flex justify-center sm:items-center shadow-[0_8px_32px_0_rgba(_31,38,135,0.37_)]  backdrop-blur-[_2px_] border rounded-[10px] border-solid border-[rgba(_255,255,255,0.18_)] bg-[rgba(255,255,255,0.4)] overflow-y-auto max-sm:py-12 
 }
 
 .viewModal{
-     @apply relative max-w-xl w-full shadow-md bg-white  rounded-lg
+     @apply relative w-4/5 shadow-md bg-white rounded-lg h-fit
 }
 .admin {
     @apply inline-block text-white rounded-2xl px-3 py-1 text-xs bg-blue-500 cursor-default my-2
